--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    display: flex;
     background-image: url(bloomen.jpg);
 }
 
@@ -36,7 +37,7 @@ body {
 }
 
 #sidebar .toggle-btn span {
-    display: block;
+    display: flex;
     width: 30px;
     height: 5px;
     background: #151719;
